--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
 }
